# Rorgets_Thesaurus

./: README.md  pyproject.toml
rorgets-thesaurus/: pyproject.toml
rorgets-thesaurus/rorgets_thesaurus/: Assignment.ipynb  embeddings_with_bert.py  openai_embeddings.py  original.json
