[tool.poetry]
name = "rorgets-thesaurus"
version = "0.1.0"
description = ""
authors = ["angelisM <t8200001@aueb.gr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
umap-learn = "^0.5.5"
matplotlib = "^3.8.3"
langchain-openai = "^0.0.7"
torch = "^2.2.1"
transformers = "^4.38.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
